--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background-color:white;
+    background-color:#fff1e6;
     color: #CE704A;
     font-family: Arial, Helvetica, sans-serif}
 
@@ -12,7 +12,7 @@ body {
 #subtitle {
   margin-top: 4em;
   margin-left: 11em;
-  color:#464625;}
+  color:#2E4052;}
 
 #prompt {
   text-align: center;
@@ -71,15 +71,15 @@ th {
   height: 3em;
   width:2em;
   text-align: center;
-  background-color: #FCC1A7; 
+  background-color: #8AA29E; 
   color: black;
   font-weight: normal;
   border-radius: 15px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;}
 
 img {
-  border-radius: 15px;
-}
+  border-radius: 15px;}
+
 aside {
   text-align: center;
   color: #CE704A;
@@ -99,7 +99,22 @@ aside {
 
 footer{
   text-align: center;
-  color: #464625;
+  color: #2E4052;
   padding-top: 4em;
   margin-top: em;
   margin-bottom: 2em;}
+
+.repeat_link a {
+  color: #2E4052;
+  text-decoration: none;
+  background-color: #fff1e6;
+}
+
+.repeat_link a:hover {
+  background-color: #fff1e6;
+  color: #2E4052;}
+  
+  /* Add a color to the active/current link */
+.repeat_link {
+  background-color: #fff1e6;
+  color: #2E4052;}
