--- a/css/contact.css
+++ b/css/contact.css
@@ -74,6 +74,9 @@ footer{
   margin-bottom: 2em;}
 
 .repeat_link a {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  font-size: 23px;
   color: #2E4052;
   text-decoration: none;
   background-color: #fff1e6;}
